// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing add signal helper architecture.vhd 1`] = `
[
  {
    "code": "0;1",
    "message": "object 'foo' is written but not declared (not-declared)",
    "range": {
      "end": {
        "character": 5,
        "line": 10,
      },
      "start": {
        "character": 2,
        "line": 10,
      },
    },
    "severity": 1,
  },
]
`;

exports[`testing add signal helper architecture.vhd 2`] = `
[
  {
    "command": {
      "arguments": [
        {
          "position": {
            "character": 0,
            "line": 9,
          },
          "signalName": "foo",
          "textDocumentUri": "file://architecture.vhd",
        },
      ],
      "command": "vhdl-linter:add-signal",
      "title": "add foo as signal to architecture",
    },
    "kind": "quickfix",
    "title": "add foo as signal to architecture",
  },
]
`;

exports[`testing add signal helper architecture.vhd 3`] = `
[
  {
    "edit": {
      "changes": {
        "file://architecture.vhd": [
          {
            "newText": " -- vhdl-linter-disable-line not-declared",
            "range": {
              "end": {
                "character": 1000,
                "line": 10,
              },
              "start": {
                "character": 1000,
                "line": 10,
              },
            },
          },
        ],
      },
    },
    "kind": "quickfix",
    "title": "Ignore not-declared on this line.",
  },
  {
    "edit": {
      "changes": {
        "file://architecture.vhd": [
          {
            "newText": "-- vhdl-linter-disable not-declared
",
            "range": {
              "end": {
                "character": 0,
                "line": 0,
              },
              "start": {
                "character": 0,
                "line": 0,
              },
            },
          },
        ],
      },
    },
    "kind": "quickfix",
    "title": "Ignore not-declared for this file.",
  },
]
`;

exports[`testing add signal helper generic.vhd 1`] = `
[
  {
    "code": "0;1",
    "message": "object 'test' is referenced but not declared (not-declared)",
    "range": {
      "end": {
        "character": 17,
        "line": 18,
      },
      "start": {
        "character": 13,
        "line": 18,
      },
    },
    "severity": 1,
  },
]
`;

exports[`testing add signal helper generic.vhd 2`] = `
[
  {
    "command": {
      "arguments": [
        {
          "position": {
            "character": 0,
            "line": 15,
          },
          "signalName": "test",
          "textDocumentUri": "file://generic.vhd",
        },
      ],
      "command": "vhdl-linter:add-signal",
      "title": "add test as signal to architecture",
    },
    "kind": "quickfix",
    "title": "add test as signal to architecture",
  },
]
`;

exports[`testing add signal helper generic.vhd 3`] = `
[
  {
    "edit": {
      "changes": {
        "file://generic.vhd": [
          {
            "newText": " -- vhdl-linter-disable-line not-declared",
            "range": {
              "end": {
                "character": 1000,
                "line": 18,
              },
              "start": {
                "character": 1000,
                "line": 18,
              },
            },
          },
        ],
      },
    },
    "kind": "quickfix",
    "title": "Ignore not-declared on this line.",
  },
  {
    "edit": {
      "changes": {
        "file://generic.vhd": [
          {
            "newText": "-- vhdl-linter-disable not-declared
",
            "range": {
              "end": {
                "character": 0,
                "line": 0,
              },
              "start": {
                "character": 0,
                "line": 0,
              },
            },
          },
        ],
      },
    },
    "kind": "quickfix",
    "title": "Ignore not-declared for this file.",
  },
]
`;
